Implement Export feature for advanced sample search.
SVN-Revision: 16532